--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,20 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/gradle.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.idea
+build/*
+!build/build.xml
