--- a/segmentedprogressbar/build.gradle
+++ b/segmentedprogressbar/build.gradle
@@ -27,4 +27,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
