feat(main): add ViewPager2 example.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    implementation project(':segmentedprogressbar')
+    //implementation 'com.github.TOrnelas:SegmentedProgressBar:0.0.1'
+    implementation project(":segmentedprogressbar")
 }
